--- a/net.sourceforge.eclipsetrader.charts/plugin.xml
+++ b/net.sourceforge.eclipsetrader.charts/plugin.xml
@@ -440,6 +440,14 @@
                class="net.sourceforge.eclipsetrader.charts.indicators.SDPreferencePage"
                title="Standard Deviation"/>
       </indicator>
+      <indicator
+            class="net.sourceforge.eclipsetrader.charts.indicators.ROC"
+            id="net.sourceforge.eclipsetrader.indicators.roc"
+            name="Rate Of Change - ROC">
+         <preferencePage
+               class="net.sourceforge.eclipsetrader.charts.indicators.ROCPreferencePage"
+               title="Rate Of Change"/>
+      </indicator>
    </extension>
    <extension
          point="net.sourceforge.eclipsetrader.charts.objects">
@@ -476,6 +484,14 @@
             class="net.sourceforge.eclipsetrader.charts.objects.BuyArrow"
             id="net.sourceforge.eclipsetrader.objects.buyarrow"
             name="Buy Arrow">
+      </object>
+      <object
+            class="net.sourceforge.eclipsetrader.charts.objects.FanLines"
+            id="net.sourceforge.eclipsetrader.objects.fanlines"
+            name="Fibonacci Fan Lines">
+         <preferencePage
+               class="net.sourceforge.eclipsetrader.charts.objects.FanLinesPreferences"
+               title="Fibonacci Fan Lines"/>
       </object>
    </extension>
 
