Added world indices wizard
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@508 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.yahoo/plugin.xml
+++ b/net.sourceforge.eclipsetrader.yahoo/plugin.xml
@@ -28,6 +28,13 @@
                label="French Stock Security"
                menubarPath="file/newWizard/plugins"
                style="push"/>
+         <action
+               class="net.sourceforge.eclipsetrader.yahoo.actions.NewIndexAction"
+               icon="icons/world.png"
+               id="net.sourceforge.eclipsetrader.yahoo.newIndex"
+               label="Index"
+               menubarPath="file/newWizard/top"
+               style="push"/>
       </actionSet>
    </extension>
    <extension
