Added chart data range preferences
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@510 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.core/plugin.xml
+++ b/net.sourceforge.eclipsetrader.core/plugin.xml
@@ -76,6 +76,10 @@
             class="net.sourceforge.eclipsetrader.core.ui.preferences.ProxyPreferencePage"
             id="net.sourceforge.eclipsetrader.core.proxy"
             name="Network"/>
+		<page
+            class="net.sourceforge.eclipsetrader.core.ui.preferences.DataPreferencesPage"
+            id="net.sourceforge.eclipsetrader.data"
+            name="Data"/>
    </extension>
    <extension
          point="org.eclipse.ui.themes">
