Added support for indicator's clipboard (cut, copy, paste and paste as new tab) and retargettable actions (delete and settings)
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@526 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.charts/plugin.xml
+++ b/net.sourceforge.eclipsetrader.charts/plugin.xml
@@ -78,19 +78,11 @@
             id="chartsView"
             targetID="net.sourceforge.eclipsetrader.views.chart">
          <action
-               class="net.sourceforge.eclipsetrader.charts.actions.DeleteObjectAction"
-               enablesFor="1"
-               id="net.sourceforge.eclipsetrader.charts.deleteIndicator"
-               label="Delete Object"
-               menubarPath="group1"
-               style="push">
-         </action>
-         <action
                class="net.sourceforge.eclipsetrader.charts.actions.EditObjectAction"
                enablesFor="1"
                id="net.sourceforge.eclipsetrader.charts.editIndicator"
                label="Edit Object"
-               menubarPath="group1"
+               menubarPath="top"
                style="push">
             <enablement>
                <objectClass name="net.sourceforge.eclipsetrader.charts.events.IndicatorSelection"/>
@@ -100,13 +92,7 @@
                class="net.sourceforge.eclipsetrader.charts.actions.NewIndicatorAction"
                id="net.sourceforge.eclipsetrader.charts.newIndicator"
                label="New Indicator"
-               menubarPath="group1"
-               style="push"/>
-         <action
-               class="net.sourceforge.eclipsetrader.charts.actions.ChartSettingsAction"
-               id="net.sourceforge.eclipsetrader.charts.preferences"
-               label="Settings..."
-               menubarPath="group5"
+               menubarPath="top"
                style="push"/>
       </viewerContribution>
       <viewerContribution
@@ -203,12 +189,6 @@
                id="net.sourceforge.eclipsetrader.charts.newIndicator"
                label="New Indicator"
                menubarPath="group1"
-               style="push"/>
-         <action
-               class="net.sourceforge.eclipsetrader.charts.actions.ChartSettingsAction"
-               id="net.sourceforge.eclipsetrader.charts.preferences"
-               label="Settings..."
-               menubarPath="group5"
                style="push"/>
          <action
                class="net.sourceforge.eclipsetrader.charts.actions.UpdateChartAction"
