Added pasteSpecial key binding
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@529 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader/plugin.xml
+++ b/net.sourceforge.eclipsetrader/plugin.xml
@@ -64,6 +64,25 @@
       </actionSet>
    </extension>
    <extension
+         point="org.eclipse.ui.bindings">
+      <key
+            commandId="org.eclipse.ui.edit.pasteSpecial"
+            contextId="org.eclipse.ui.contexts.dialogAndWindow"
+            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+            sequence="M1+M2+V"/>
+   </extension>
+   <extension
+         point="org.eclipse.ui.commands">
+      <command
+            categoryId="org.eclipse.ui.category.edit"
+            id="org.eclipse.ui.edit.pasteSpecial"
+            name="Paste Special"/>
+      <command
+            categoryId="org.eclipse.ui.category.edit"
+            id="org.eclipse.ui.edit.settings"
+            name="Settings"/>
+   </extension>
+   <extension
          point="org.eclipse.ui.preferencePages">
       <page
             category="net.sourceforge.eclipsetrader"
