--- a/net.sourceforge.eclipsetrader.core/plugin.xml
+++ b/net.sourceforge.eclipsetrader.core/plugin.xml
@@ -3,6 +3,7 @@
 <plugin>
    <extension-point id="feeds" name="Security Feed" schema="schema/feeds.exsd"/>
    <extension-point id="news" name="News Provider" schema="schema/news.exsd"/>
+   <extension-point id="patterns" name="Price Pattern" schema="schema/patterns.exsd"/>
    <extension
          point="org.eclipse.ui.actionSets">
       <actionSet
