Added pattern search for single security
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@552 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.trading/plugin.xml
+++ b/net.sourceforge.eclipsetrader.trading/plugin.xml
@@ -247,6 +247,12 @@
                id="net.sourceforge.eclipsetrader.trading.openLevel2"
                label="Open Level2"
                menubarPath="top"/>
+         <action
+               class="net.sourceforge.eclipsetrader.trading.actions.SecurityPatternSearchAction"
+               enablesFor="1"
+               id="net.sourceforge.eclipsetrader.trading.searchPattern"
+               label="Search Pattern"
+               menubarPath="group5"/>
       </viewerContribution>
       <viewerContribution
             id="securitiesView"
@@ -257,6 +263,12 @@
                id="net.sourceforge.eclipsetrader.trading.openLevel2"
                label="Open Level2"
                menubarPath="top"/>
+         <action
+               class="net.sourceforge.eclipsetrader.trading.actions.SecurityPatternSearchAction"
+               enablesFor="1"
+               id="net.sourceforge.eclipsetrader.trading.searchPattern"
+               label="Search Pattern"
+               menubarPath="group5"/>
       </viewerContribution>
    </extension>
    <extension
