--- a/net.sourceforge.eclipsetrader/plugin_customization.ini
+++ b/net.sourceforge.eclipsetrader/plugin_customization.ini
@@ -2,6 +2,7 @@ org.eclipse.ui/DOCK_PERSPECTIVE_BAR=topRight
 org.eclipse.ui/SHOW_PROGRESS_ON_STARTUP=false
 org.eclipse.ui/SHOW_TRADITIONAL_STYLE_TABS=false
 org.eclipse.ui/defaultPerspectiveId=net.sourceforge.eclipsetrader
+org.eclipse.update.core/org.eclipse.update.core.updateVersions=compatible
 net.sourceforge.eclipsetrader.news/FOLLOW_QUOTE_FEED=true
 net.sourceforge.eclipsetrader.news/net.sourceforge.eclipsetrader.yahoo.news=true
 net.sourceforge.eclipsetrader.yahoo/international=true
