Added a simple currency conversion dialog to the currency exchange view
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@566 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.core/plugin.xml
+++ b/net.sourceforge.eclipsetrader.core/plugin.xml
@@ -132,6 +132,12 @@
                style="push"
                toolbarPath="group6"
                tooltip="Update Currency Exchange"/>
+         <action
+               class="net.sourceforge.eclipsetrader.core.ui.actions.ConvertCurrencyAction"
+               id="net.sourceforge.eclipsetrader.currencyConversion"
+               label="Convert..."
+               menubarPath="additions"
+               style="push"/>
       </viewContribution>
    </extension>
 
